Implemented VERY rudimentary sound. Had to include Winmm.lib in additional include directories, as shown in the Microsoft PlaySound() documentation at:
https://learn.microsoft.com/en-us/previous-versions/dd743680(v=vs.85)

Note to self: Don't spam call PlaySound() or it lags for a really long time before actually playing the sound.

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -130,7 +130,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Users\gsnWo\source\repos\RayTracer\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>RayTracerSYCL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>RayTracerSYCL.lib;Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
